--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "raw-body": "^2.4.1",
     "runes": "^0.4.3"
   }
